--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,11 @@
   color: #61dafb;
 }
 
+.app_components {
+  font-size: calc(10px + 2vmin);
+  font-family: sans-serif;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
