--- a/src/Components/css/Search.css
+++ b/src/Components/css/Search.css
@@ -31,43 +31,33 @@
   line-height: 1.25;
   font-size: 15px;
   color: #4a5568;
-  margin-bottom: 0.5rem;
+  width: 100%;
+  cursor: pointer;
 }
 
 .navbar {
   height: var(--nav-size);
-  background-color: var(--bg);
-  padding: 0 1rem;
-  border-bottom: var(--border);
 }
 
 .navbar-nav {
   max-width: 100%;
   height: 100%;
   display: flex;
-  justify-content: flex-end;
 }
 
 .nav-item {
-  width: calc(var(--nav-size) * 0.8);
   height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .icon-button {
   --button-size: calc(var(--nav-size) * 0.5);
   width: var(--button-size);
   height: var(--button-size);
-  background-color: #484a4d;
-  border-radius: 50%;
-  padding: 5px;
-  margin: 2px;
+  background-color: white;
+  border: none;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: filter 300ms;
+  cursor: pointer;
+  font-weight: bolder;
 }
 
 .icon-button:hover {
@@ -78,13 +68,15 @@
   fill: var(--text-color);
   width: 20px;
   height: 20px;
+  font-size: 1.5rem;
+  line-height: 2rem;
+  margin-right: 18px;
 }
 
 /* Dropdown Menu */
 
 .dropdown {
   position: relative;
-  display: inline-block;
 }
 
 .menu {
@@ -93,10 +85,8 @@
   top: 100%;
   left: 0;
   background-color: var(--bg);
-  border-radius: 5px;
   box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
   overflow: hidden;
-
 
   /* Hide the menu by default */
   display: none;
@@ -106,7 +96,6 @@
 
   /* Add padding */
   padding: 0.5rem 0;
-  
 }
 
 .dropdown__button {
